[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/UI/flatDark10.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/flatDark00.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Scripts/MobileControls.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 113.5, 143 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 398.5, 300 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 113.5, 157 )

[node name="MobileControls" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="JoyStickArea" type="Area2D" parent="."]
position = Vector2( 10, 410 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="JoyStickArea"]
position = Vector2( 103.5, 47 )
shape = SubResource( 2 )

[node name="JoyStick" type="TouchScreenButton" parent="JoyStickArea"]
position = Vector2( 18, 15 )
normal = ExtResource( 1 )
passby_press = true

[node name="Sprite" type="Sprite" parent="JoyStickArea"]
position = Vector2( 98, 94 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="LookArea" type="Area2D" parent="."]
position = Vector2( 237, 10 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LookArea"]
position = Vector2( 388.5, 290 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="LookArea"]
position = Vector2( -123.5, 147 )
shape = SubResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.988
anchor_top = 0.52
anchor_right = 0.988
anchor_bottom = 0.52
margin_left = -63.712
margin_top = -32.0
margin_right = 0.287964
margin_bottom = 32.0

[node name="Button" type="TouchScreenButton" parent="Control"]
normal = ExtResource( 3 )
action = "ui_select"

[node name="PopUpArea" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[connection signal="input_event" from="JoyStickArea" to="." method="_on_Control_input_event"]
[connection signal="input_event" from="LookArea" to="." method="_on_LookArea_input_event"]
